Fix image squashing - I hope

--- a/docs/styles/article.css
+++ b/docs/styles/article.css
@@ -182,5 +182,5 @@ img.center {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%; /* Adjust as needed */
+  /* width: 50%; */ /* Adjust as needed */
 }
